--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -94,13 +94,13 @@
     <!-- the slideshow/carousel -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="la.jpg" alt="Los Angeles" class="d-block" style="width:100%; height: 200px;">
+        <img src="../bootstrap_practise/Images/personalimages/personal_pics/IMG-20230221-WA0047.jpg" alt="Los Angeles" class="d-block" style="width:100%; height: 500px;">
       </div>
       <div class="carousel-item">
-        <img src="" alt="Chicago" class="d-block" style="width:100%; height: 200px;">
+        <img src="../bootstrap_practise/Images/personalimages/Copenhagen/Mike and Joe.jpeg" alt="" class="d-block" style="width:100%; height: 500px;">
       </div>
       <div class="carousel-item">
-        <img src="../bootstrap_practise/Images/personalimages/personal_pics/dopeboy.jpg" alt="New York" class="d-block" style="width:100%; height: 200px;">
+        <img src="../bootstrap_practise/Images/personalimages/personal_pics/dopeboy.jpg" alt="New York" class="d-block" style="width:100%; height: 500px;">
       </div>
 
     </div>
