--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -78,7 +78,7 @@
   </dl>
   <!-- code snippets -->
   <p>
-    The following HTML elements: <code> span </code>, <code> section </code>, <code>div</code>
+    The followings should not be taken for granted: <code> span </code>, <code> section </code>, <code>div</code>
   </p>
 
   <!-- Carousel -->
