--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -80,6 +80,9 @@
   <p>
     The followings should be part of the data that we need: <code> span </code>, <code> section </code>, <code>div</code>
   </p>
+  <p>
+    The followings are going to be the best in the league right now
+  </p>
 
   <!-- Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
