--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -80,9 +80,7 @@
   <p>
     The followings should be part of the data that we need: <code> span </code>, <code> section </code>, <code>div</code>
   </p>
-  <p>
-    The followings are going to be the best in the league right now
-  </p>
+
 
   <!-- Carousel -->
   <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -107,6 +105,9 @@
       </div>
 
     </div>
+    <p>
+      Man city is the best team in the premier league
+    </p>
 
     <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
