--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -106,8 +106,9 @@
 
     </div>
     <p>
-      Man city is the best team in the premier league
+      I am a proud Manchester United fan in the world of foorball and I am excited to be a fan of the league
     </p>
+  
 
     <!-- Left and right controls/icons -->
   <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
