--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -116,7 +116,10 @@
   </button>
 
   <!--  Keyboard elements -->
-  
+  <p>
+    <kbd> ctrl + p </kbd> to open the print dialog box
+  </p>
+
 </div>
 
   </div>
