--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -120,6 +120,11 @@
     <kbd> ctrl + p </kbd> to open the print dialog box
   </p>
 
+  <!-- pre will style the HTML element in the following ways-->
+  <pre>
+
+  </pre>
+
 </div>
 
   </div>
