--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -121,9 +121,14 @@
   </p>
 
   <!-- pre will style the HTML element in the following ways-->
-  <pre>
-
-  </pre>
+  <p class="text-muted">
+    This text is muted.    
+  </p>
+  <p class="text-primary"> This text is important</p>
+  <p class="text-success"> This text indicates success </p>
+  <p class="text-info"> This text represents a warning. </p>
+  <p class="text-danger"> This text represents danger </p>
+  
 
 </div>
 
