--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -128,8 +128,10 @@
   <p class="text-success"> This text indicates success </p>
   <p class="text-info"> This text represents a warning. </p>
   <p class="text-danger"> This text represents danger </p>
-  
+  <p class="text-black-50"> Black text with 50% opacity on white background </p>
+  <p class="text-white-50 bg-dark"> ;White text with 50% opacity on black
 
+  </p>
 </div>
 
   </div>
