--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -129,9 +129,22 @@
   <p class="text-info"> This text represents a warning. </p>
   <p class="text-danger"> This text represents danger </p>
   <p class="text-black-50"> Black text with 50% opacity on white background </p>
-  <p class="text-white-50 bg-dark"> ;White text with 50% opacity on black
+  <p class="text-white-50 bg-dark"> ;White text with 50% opacity on black</p>
+  <div class="bg-primary p-3"> </div>
 
-  </p>
+    <!-- Bootstrap 5 table -->
+    <table class="table">
+      <thead>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+    </table>
+
+
+
 </div>
 
   </div>
