--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -161,7 +161,27 @@
     </table>
 
       <!-- table-striped -->
-      
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Firstname</th>
+            <th>Lastname</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>John</td>
+            <td>Doe</td>
+            <td>john@example.com</td>
+          </tr>
+          <tr>Mary</tr>
+          <tr>Moe</tr>
+          <tr>mary@example.com</tr>
+        </tbody>
+
+      </table>
+
     </div>
   </div>
 
