--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -175,9 +175,17 @@
             <td>Doe</td>
             <td>john@example.com</td>
           </tr>
-          <tr>Mary</tr>
-          <tr>Moe</tr>
-          <tr>mary@example.com</tr>
+          <tr>
+          <td>Mary</td>
+          <td>Moe</td>
+          <td>mary@example.com</td>
+          </tr>
+          <tr>
+            <td>July</td>
+            <td>Dooley</td>
+            <td>july@example.com</td>
+          </tr>
+          
         </tbody>
 
       </table>
