--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -225,7 +225,7 @@
     <!-- end of bordered table -->
 
     <!-- table hoover. table dark, table-striped -->
-    <table class="table table-hover table-dark table-striped">
+    <table class="table table-hover table-dark table-striped table-borderless">
       <thead>
         <tr>
           <th>Firstname</th>
@@ -251,7 +251,34 @@
         </tr>
       </tbody>
     </table>
-
+    <!-- table borderless -->
+    <table class="table table-borderless">
+      <thead>
+        <tr>
+          <th>Firstname</th>
+          <th>Lastname</th>
+          <th>Email</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>John</td>
+          <td>Doe</td>
+          <td>john@example.com</td>
+        </tr>
+        <tr>
+          <td>Mary</td>
+          <td>Moe</td>
+          <td>mary@example.com</td>
+        </tr>
+        <tr>
+          <td>July</td>
+          <td>Dooley</td>
+          <td>july@example.com</td>
+        </tr>
+      </tbody>
+    </table>
+    <!-- end of table borderless -->
   </div>
 
   
