--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -342,9 +342,18 @@
         </tr>
       </tbody>
     </table>
+    <!-- end of contextual classes -->
+
+    <!-- table small -->
+    <!-- table responsive -->
+
+    
+
   </div>
 
-  
+  <!-- Images -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="rounded"
+  alt="personal_pic" width="400" height="300">
   
 
   </div>
