--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -352,9 +352,25 @@
   </div>
 
   <!-- Images -->
+  <!-- rounded -->
   <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="rounded"
-  alt="personal_pic" width="400" height="300">
+  alt="personal_pic" width="350" height="250">
+
+  <!-- rounded circle -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="rounded-circle"
+  alt="personal_pic" width="350" height="250">
+
+  <!-- image thumbnail -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="img-thumbnail"
+  alt="personal_pic" width="350" height="250">
+
+  <!-- float start and float end -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="float-start"
+  alt="personal_pic" width="350" height="250">
+
   
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="float-end"
+  alt="personal_pic" width="350" height="250">
 
   </div>
   
