--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -372,6 +372,32 @@
   <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="float-end"
   alt="personal_pic" width="350" height="250">
 
+  <!-- centering an image -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="mx-auto d-block"
+  alt="personal_pic" width="350" height="250">
+
+  <!-- image fluid -->
+  <img src="Images/personalimages/Copenhagen/Mikey.jpeg"  class="img-fluid"
+  alt="personal_pic" height="300px">
+  <!-- End of images -->
+
+
+  <!-- jumbotron -->
+
+  <div class="container mt-3">
+    <h2> jumbotron</h2>
+    <div class="mt-4 p-5 bg-primary text-white rounded">
+      <h1> Jumbotron example</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+        nisi ut aliquip ex ea commodo consequat..
+      </p>
+    </div>
+
+  </div>
+
   </div>
   
   
