--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -395,7 +395,23 @@
         nisi ut aliquip ex ea commodo consequat..
       </p>
     </div>
+  </div>
 
+  <!-- Alerts -->
+  <div class="alert alert-success">
+    <strong> Success!</strong> Indicates a successful or positive action
+  </div>
+
+  <!-- closing alerts -->
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert">    
+    </button>
+    <strong>Success!</strong> This alert could indicate a successful or postive action.
+  </div>
+
+  <div class="alert alert-success alert-dismissible">
+    <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
+    <strong>Success!</strong> This alert box could indicate a successful or positive action.
   </div>
 
   </div>
