--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -419,8 +419,7 @@
     <strong>Success!</strong> This alert box could indicate a successful or positive action.
   </div>
 
-
-
+<!-- buttons -->
   <div class="container mt-3">
     <h2>Button Styles</h2>
     <button type="button" class="btn">Basic</button>
@@ -433,6 +432,16 @@
     <button type="button" class="btn btn-dark">Dark</button>
     <button type="button" class="btn btn-light">Light</button>
     <button type="button" class="btn btn-link">Link</button>      
+  </div>
+  <!-- buttons -->
+
+  <div class="container mt-3">
+    <h2> Button elements</h2>
+    <a href="#" class="btn btn-success"> Link Button </a>
+    <button type="button" class="btn btn-success"> Button </button>
+    <input type="button" class="btn btn-sucess" value="Input Button">
+    <input type="submit" class="btn btn-success" value="Submit Button">
+    <input type="reset" class="btn btn-success" value="Reset Button">
   </div>
 
   </div>
