--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -444,6 +444,9 @@
     <input type="reset" class="btn btn-success" value="Reset Button">
   </div>
 
+  <!-- button outline -->
+  
+
   </div>
   
   
