--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -434,7 +434,6 @@
     <button type="button" class="btn btn-link">Link</button>      
   </div>
   <!-- buttons -->
-
   <div class="container mt-3">
     <h2> Button elements</h2>
     <a href="#" class="btn btn-success"> Link Button </a>
@@ -443,9 +442,15 @@
     <input type="submit" class="btn btn-success" value="Submit Button">
     <input type="reset" class="btn btn-success" value="Reset Button">
   </div>
-
-  <!-- button outline -->
   
+  <!-- button outline -->
+  <div>
+    <h2>Button Sizes </h2>
+    <button type="button" class="btn btn-primary btn-lg"> Large </button>
+    <button type="button" class="btn btn-primary"> Default </button>
+    <button type="button" class="btn btn-primary"> Small </button>
+  </div>
+
 
   </div>
   
