--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -449,6 +449,18 @@
     <button type="button" class="btn btn-primary btn-lg"> Large </button>
     <button type="button" class="btn btn-primary"> Default </button>
     <button type="button" class="btn btn-primary"> Small </button>
+
+    <!-- block level buttons -->
+
+    <div class="container mt-3">
+      <h2>Block Level Buttons</h2>
+      <p>To create a block level button that spans the entire width of the parent element, use the .d-grid "helper" class on the parent element:</p>
+      <div class="d-grid">
+        <button type="button" class="btn btn-primary btn-block">Full-Width Button</button>
+      </div>
+    </div>
+
+
   </div>
 
 
