--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -455,11 +455,21 @@
     <div class="container mt-3">
       <h2>Block Level Buttons</h2>
       <p>To create a block level button that spans the entire width of the parent element, use the .d-grid "helper" class on the parent element:</p>
+      
       <div class="d-grid">
         <button type="button" class="btn btn-primary btn-block">Full-Width Button</button>
       </div>
-    </div>
 
+      <div class="d-grip gap-3">
+        <button type="button" class="btn btn-primary btn-block"> Full-Width Button</button>
+        <button type="button" class="btn btn-primary btn-block"> Full-width Button</button>
+        <button type="button" class="btn btn-primary btn-block"> Full-width Button</button>
+
+      </div>
+
+
+
+    </div>
 
   </div>
 
