--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -460,7 +460,7 @@
         <button type="button" class="btn btn-primary btn-block">Full-Width Button</button>
       </div>
     </div>
-    
+
 
     <div class="d-grip gap-3">
       <button type="button" class="btn btn-primary btn-block"> Full-Width Button</button>
@@ -469,6 +469,14 @@
     </div>
 
   </div>
+
+  <div class="container mt-3">
+    <button type="button" class="btn btn-primary"> Primary Button </button>
+    <button type="button" class="btn btn-primary active"> Active Primary </button>
+    <button type="button" class="btn btn-primary" disabled> Disabled Primary </button>
+    
+  </div>
+
   </div>  
 </div>
 <!-- END OF CONTAINER -->
