--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -474,7 +474,7 @@
     <button type="button" class="btn btn-primary"> Primary Button </button>
     <button type="button" class="btn btn-primary active"> Active Primary </button>
     <button type="button" class="btn btn-primary" disabled> Disabled Primary </button>
-    
+    <a href="#" class="btn btn-primary disabled"> Disabled Link</a>    
   </div>
 
   </div>  
