--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -236,6 +236,7 @@
       <tbody>
         <tr>
           <td>John</td>
+          <td>Image</td>
           <td>Doe</td>
           <td>john@example.com</td>
         </tr>
@@ -478,6 +479,20 @@
   </div>
 
   </div>  
+</div>
+
+<div class="container">
+  <button class="btn btn-primary">
+    <span class="spinner-border spinner-border-sm">
+
+    </span>
+
+  </button>
+  <button class="btn btn-primary" disabled>
+    <span class="spinner-grow spinner-grow-sm"></span>
+    Loading..
+  </button>
+
 </div>
 <!-- END OF CONTAINER -->
   
