--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -236,7 +236,7 @@
       <tbody>
         <tr>
           <td>John</td>
-          <td>Image</td>
+          <td>Michael</td>
           <td>Doe</td>
           <td>john@example.com</td>
         </tr>
