--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -234,22 +234,27 @@
         </tr>
       </thead>
       <tbody>
+
         <tr>
           <td>John</td>
-          <td>Michael</td>
           <td>Doe</td>
           <td>john@example.com</td>
         </tr>
+
         <tr>
           <td>Mary</td>
           <td>Moe</td>
+          <td>Mayor</td>
           <td>mary@example.com</td>
         </tr>
+
         <tr>
           <td>July</td>
+          <td>August</td>
           <td>Dooley</td>
           <td>july@example.com</td>
         </tr>
+
       </tbody>
     </table>
     <!-- table borderless -->
