--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -227,11 +227,14 @@
     <!-- table hoover. table dark, table-striped -->
     <table class="table table-hover table-dark table-striped table-borderless">
       <thead>
+
         <tr>
           <th>Firstname</th>
           <th>Lastname</th>
           <th>Email</th>
+          <th>Personal Profile </th>
         </tr>
+
       </thead>
       <tbody>
 
@@ -239,6 +242,7 @@
           <td>John</td>
           <td>Doe</td>
           <td>john@example.com</td>
+          <td>Michael Ocan Ojok </td>
         </tr>
 
         <tr>
