--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -262,6 +262,7 @@
           <th>Firstname</th>
           <th>Lastname</th>
           <th>Email</th>
+          <th>Email address</th>
         </tr>
       </thead>
       <tbody>
@@ -269,11 +270,13 @@
           <td>John</td>
           <td>Doe</td>
           <td>john@example.com</td>
+          <td>Ojok Michael Ocan</td>
         </tr>
         <tr>
           <td>Mary</td>
           <td>Moe</td>
           <td>mary@example.com</td>
+          <td>Ojok Michael Ocan </td>
         </tr>
         <tr>
           <td>July</td>
