--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -499,6 +499,14 @@
     Loading..
   </button>
 
+  <!-- button groups -->
+  <div class="btn-group">
+    <button type="button" class="btn btn-primary">Apple</button>
+    <button type="button" class="btn btn-primary"> Samsung</button>
+    <button type="button" class="btn btn-primary"> Sony </button>
+  </div>
+
+
 </div>
 <!-- END OF CONTAINER -->
   
