--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -504,6 +504,7 @@
     <button type="button" class="btn btn-primary">Apple</button>
     <button type="button" class="btn btn-primary"> Samsung</button>
     <button type="button" class="btn btn-primary"> Sony </button>
+    <button type="button" class="btn btn-primary"> </button>
   </div>
 
 
