--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -506,6 +506,7 @@
     <button type="button" class="btn btn-primary"> Sony </button>
     <button type="button" class="btn btn-primary"> Google pixel </button>
     <button type="button" class="btn btn-primary"> Techno</button>
+    <button type="button" class="btn btn-primary">Samsung Galaxy S21</button>
   </div>
 
 
