--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -508,6 +508,8 @@
     <button type="button" class="btn btn-primary"> Techno</button>
     <button type="button" class="btn btn-primary">Samsung Galaxy S21</button>
     <button type="button" class="btn btn-success"> Mummy</button>
+    <button type="button" class="btn btn-danger"> Smart Phone</button>
+    
   </div>
 
 
