--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -509,7 +509,12 @@
     <button type="button" class="btn btn-primary">Samsung Galaxy S21</button>
     <button type="button" class="btn btn-success"> Mummy</button>
     <button type="button" class="btn btn-danger"> Smart Phone</button>
-    
+
+  </div>
+  <div class="btn-group btn-group-lg">
+    <button type="button" class="btn-primary"> Apple </button>
+    <button type="button" class="btn-primary"> Samsung</button>
+
   </div>
 
 
