--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -512,8 +512,8 @@
 
   </div>
   <div class="btn-group btn-group-lg">
-    <button type="button" class="btn-primary"> Apple </button>
-    <button type="button" class="btn-primary"> Samsung</button>
+    <button type="button" class="btn btn-primary"> Apple </button>
+    <button type="button" class="btn btn-primary"> Samsung</button>
 
   </div>
 
