--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -511,10 +511,22 @@
     <button type="button" class="btn btn-danger"> Smart Phone</button>
 
   </div>
+
   <div class="btn-group btn-group-lg">
     <button type="button" class="btn btn-primary"> Apple </button>
     <button type="button" class="btn btn-primary"> Samsung</button>
 
+  </div>
+
+  <!--vertical buttons -->
+  <div class="btn-group-vertical">
+    <button type="button" class="btn btn-primary">Apple</button>
+    <button type="button" class="btn btn-primary"> Samsung</button>
+    <button type="button" class="btn btn-primary"> Sony </button>
+    <button type="button" class="btn btn-primary"> Google pixel </button>
+    <button type="button" class="btn btn-primary"> Techno</button>
+    <button type="button" class="btn btn-primary">Samsung Galaxy S21</button>
+    <button type="button" class="btn btn-success"> Mummy</button>
   </div>
 
 
