--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -529,6 +529,21 @@
     <button type="button" class="btn btn-success"> Mummy</button>
   </div>
 
+  <!-- Nesting Button groups and dropdown Menus -->
+  <!-- Nest button groups to create dropdown menus -->
+  <div class="btn-group">
+    <button type="button" class="btn btn-primary"> Apple </button>
+    <button type="button" class="btn btn-primary"> Samsung </button>
+    <div class="btn-group">
+      <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Sony </button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" href="#">Tablet</a>
+        <a class="dropdown-item" href="#">Smartphone</a>
+      </div>
+
+    </div>
+
+  </div>
 
 </div>
 <!-- END OF CONTAINER -->
