--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -545,6 +545,10 @@
 
   </div>
 
+  <!-- bootstrap badges -->
+  <!-- Bages are used to add additional information to any content -->
+
+
 </div>
 <!-- END OF CONTAINER -->
   
