--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -547,7 +547,12 @@
 
   <!-- bootstrap badges -->
   <!-- Bages are used to add additional information to any content -->
-  
+  <div class="container mt-3">
+    <h2>Badges</h2>
+    <h1> Example heading <span class="badge bg-secondary"> New </span></h1>
+    <h2>Example heading <span class="badge bg-secondary"> New </span> </h2>
+
+  </div>
 
 
 </div>
