--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -551,10 +551,13 @@
     <h2>Badges</h2>
     <h1> Example heading <span class="badge bg-secondary"> New </span></h1>
     <h2>Example heading <span class="badge bg-secondary"> New </span> </h2>
-
   </div>
 
-
+  <!-- contextual badges -->
+  <span class="badge bg-primary"> Primary </span>
+  <span class="badge bg-secondary"> Secondary </span>
+  <span class="badge bg-success"> Success </span>
+  
 </div>
 <!-- END OF CONTAINER -->
   
