--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -557,7 +557,32 @@
   <span class="badge bg-primary"> Primary </span>
   <span class="badge bg-secondary"> Secondary </span>
   <span class="badge bg-success"> Success </span>
-  
+
+  <!-- pill badges -->
+  <span class="badge rounded-pill bg-primary"> Primary </span>
+  <span class="badge rounded-pill bg-secondary"> Secondary </span>
+  <span class="badge rounded-pill bg-danger"> Success </span>
+
+  <!-- badge inside an element -->
+  <button type="button" class="btn btn-primary">
+    Messages <span class="badge bg-danger">4</span>
+  </button>
+
+  <div class="container mt-3">
+    <!-- bootstrap 5 progress bars -->
+    <!--  A progress bar can be used to show how far a user is in a process -->
+    <div class="progress">
+      <div class="progress-bar" style="width:70%"></div>
+
+    </div>
+    <br>
+
+    <div class="progress" style="height: 20px;">
+      <div class="progress-bar" style="width:40%; height:20px"> 40% </div>
+    </div>
+
+  </div>
+
 </div>
 <!-- END OF CONTAINER -->
   
