--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -581,6 +581,16 @@
       <div class="progress-bar" style="width:40%; height:20px"> 40% </div>
     </div>
 
+      <br>
+
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped" style="width:40%;"></div>
+    </div>
+
+    <!-- Animated progress Bar -->
+    <div class="progress">
+      <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%;"> 40% </div>
+    </div>
   </div>
 
 </div>
