--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -587,10 +587,23 @@
       <div class="progress-bar progress-bar-striped" style="width:40%;"></div>
     </div>
 
+    <br>
     <!-- Animated progress Bar -->
     <div class="progress">
-      <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%;"> 40% </div>
+      <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%; height: 30px;"> 40% </div>
     </div>
+
+    <!-- Multiple Progress Bars -->
+    <div class="progress">
+      <div class="progress-bar bg-success" style="width:40%;"> Free space </div>
+      <div class="progress-bar bg-warning" style="width:10%"> Warning </div>
+      <div class="progress-bar bg-danger" style="width: 20%;"> Danger</div>
+
+    </div>
+
+
+
+    <br>
   </div>
 
 </div>
