--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -592,7 +592,7 @@
     <div class="progress">
       <div class="progress-bar progress-bar-striped progress-bar-animated" style="width:40%; height: 30px;"> 40% </div>
     </div>
-
+    <br>
     <!-- Multiple Progress Bars -->
     <div class="progress">
       <div class="progress-bar bg-success" style="width:40%;"> Free space </div>
@@ -600,7 +600,20 @@
       <div class="progress-bar bg-danger" style="width: 20%;"> Danger</div>
 
     </div>
+    <br>
 
+    <!-- Bootstrap spinners -->
+    <!-- To create a spinner/loader , use the .spinner-border class -->
+    <div class="spinner-border">
+
+    </div>
+    <!-- spinner-grow -->
+    <div class="spinner-grow text-muted">
+
+    </div>
+
+  <!-- boostrap pagination -->
+  <!-- Websites with lots of pages uses pagination to add some sort of pagination to each pages -->
 
 
     <br>
