--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -614,9 +614,31 @@
 
   <!-- boostrap pagination -->
   <!-- Websites with lots of pages uses pagination to add some sort of pagination to each pages -->
-
+    <ul class="pagination">
+      <li class="page-item disabled"> <a class="page-link" href="#"> Previous </a> </li>
+      <li class="page-item active"> <a class="page-link" href="#"> 1 </a> </li>
+      <li class="page-item"> <a class="page-link" href="#">2</a></li>
+      <li class="page-item"> <a class="page-link" href="#"> Next </a></li>
+    </ul>
 
     <br>
+    <!-- Default (left-aligned) -->
+    <ul class="pagination" style="margin: 20px 0;">
+      <li class="page-item">...</li>
+    </ul>
+
+    <!-- center aligned -->
+    <ul class="pagination justify-content-center" style="margin:20px 0 ;">
+      <li class="page-item">...</li></ul>
+
+      <ul class="pagination justify-content-end" style="margin:20px 0 ;">
+        <li class="page-item">...</li></ul>
+
+        <ul class="breadcrumb">
+          <li class="breadcrumb-item"> <a href="#"> Photos </a></li>
+          <li class="breadcrumb-item"> <a href="#"> Summer 2017 </a> </li>
+          <li class="breadcrumb-item active"> <a href="#"> Italy </a></li>
+        </ul>
   </div>
 
 </div>
