--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -639,6 +639,11 @@
           <li class="breadcrumb-item"> <a href="#"> Summer 2017 </a> </li>
           <li class="breadcrumb-item active"> <a href="#"> Italy </a></li>
         </ul>
+        <!-- Bootstrap List groups -->
+
+
+
+
   </div>
 
 </div>
