--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -639,7 +639,13 @@
           <li class="breadcrumb-item"> <a href="#"> Summer 2017 </a> </li>
           <li class="breadcrumb-item active"> <a href="#"> Italy </a></li>
         </ul>
+
         <!-- Bootstrap List groups -->
+        <ul class="list-group">
+          <li class="list-group-item"> First item </li>
+          <li class="list-group-item"> Second item </li>
+          <li class="list-group-item"> Third item </li>
+        </ul>
 
 
 
