--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -642,9 +642,33 @@
 
         <!-- Bootstrap List groups -->
         <ul class="list-group">
-          <li class="list-group-item"> First item </li>
+          <li class="list-group-item active"> First item </li>
           <li class="list-group-item"> Second item </li>
           <li class="list-group-item"> Third item </li>
+        </ul>
+
+        <!-- List group with linked items -->
+        <div class="container mt-3">
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">First item</li>
+            <li class="list-group-item">Second item</li>
+            <li class="list-group-item">Third item</li>
+            <li class="list-group-item">Fourth item</li>
+          </ul>
+        </div>
+
+        <!-- Numbered list groups -->
+        <ol class="list-group list-group-numbered">
+          <li class="list-group-item"> First item </li>
+          <li class="list-group-item"> Second item </li>
+          <li class="list-group-item"> Third item</li>
+        </ol>
+
+        <!-- Horizontal list groups -->
+        <ul class="list-group list-group-horizontal">
+          <li class="list-group-item">First item </li>
+          <li class="list-group-item"> Second item </li>
+          <li class="list-group-item"> Third item</li>
         </ul>
 
 
