--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -671,6 +671,12 @@
           <li class="list-group-item"> Third item</li>
         </ul>
 
+      <!-- Links with contextual classes   -->
+      <div class="list-group">
+        <a href="#" class="list-group-item list-group-item-action"> Action item </a>
+        <a href="#" class="list-group-item list-group-item-action list-group-item-success"> Success item </a>
+
+      </div>
 
 
 
