--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -678,6 +678,22 @@
 
       </div>
 
+      <!-- list group with badges -->
+      <ul class="list-group">
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Inbox
+          <span class="badge bg-primary rounded-pill">12</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Ads
+          <span class="badge bg-primary rounded-pill">50</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+          Junk
+          <span class="badge bg-primary rounded-pill">99</span>
+        </li>
+      </ul>
+
 
 
   </div>
