--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -695,6 +695,14 @@
       </ul>
 
 
+        <!-- Bootstrap cards -->
+        <div class="card">
+          <div class="card-body"> Basic card </div>
+
+        </div>
+
+
+
 
   </div>
 
