--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -698,7 +698,12 @@
         <!-- Bootstrap cards -->
         <div class="card">
           <div class="card-body"> Basic card </div>
-
+        </div>
+        
+        <div class="card">
+          <div class="card-header"> Header </div>
+          <div class="card-body"> Content </div>
+          <div class="card-footer"> Footer </div>
         </div>
 
 
