--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -706,6 +706,40 @@
           <div class="card-footer"> Footer </div>
         </div>
 
+        <!-- contextual cards -->
+        <div class="card">
+          <div class="card-body"> Basic card </div>
+          <br>
+          <div class="card bg-primary text-white">
+            <div class="card-body"> Primary card </div>
+          </div>
+          <br>
+          <div class="card bg-success text-white">
+            <div class="card-body"> Success card </div>
+          </div>
+        </div>
+
+        <!-- Titles, text, and links -->
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title"> Card title </h4>
+            <p class="card-text"> Some example text</p>
+            <a href="#" class="card-link"> Card link</a>
+            <a href="#" class="card-link"> Another link</a>
+          </div>
+        </div>
+        <div class="card" style="width:400px;">
+          <img class="card-img-top" src="Images/personalimages/personal_pics/dopeboy.jpg" alt="#" width="300px" height="200px">
+          <div class="card-body">
+            <h4 class="card-title"> Ojok Michael Ocan </h4>
+            <p class="card-text"> I am called Ojok Michael Ocan and I am a software engineer</p>
+            <a href="#" class="btn btn-primary"> See profile</a>
+          </div>
+
+        </div>
+
+
+
 
 
 
