--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -735,9 +735,19 @@
             <p class="card-text"> I am called Ojok Michael Ocan and I am a software engineer</p>
             <a href="#" class="btn btn-primary"> See profile</a>
           </div>
-
         </div>
 
+        <!-- card-image overlay -->
+        <div class="card img-fluid" style="width: 500px;">
+          <img class="card-img-top" src="Images/personalimages/personal_pics/dopeboy2.jpg" alt="" width="400px" height="300px">
+          <div class="card-img-overlay">
+            <h4 class="car-title"> Ojok Michael Ocan </h4>
+            <p class="card-text"> Some examples are really great</p>
+            <a class="btn btn-primary" href="#"> My profile</a>
+
+          </div>
+        </div>
+        
 
 
 
