--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -744,9 +744,12 @@
             <h4 class="car-title"> Ojok Michael Ocan </h4>
             <p class="card-text"> Some examples are really great</p>
             <a class="btn btn-primary" href="#"> My profile</a>
-
           </div>
         </div>
+        <!-- End of card-image overlay -->
+
+        <!-- Dropdowns buttons -->
+        
         
 
 
