--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -749,7 +749,18 @@
         <!-- End of card-image overlay -->
 
         <!-- Dropdowns buttons -->
-        
+        <div class="dropdown">
+          <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+            dropdown button
+          </button>
+          <ul class="dropdown-menu">
+            <li> <a class="dropdown-item" href="#"> Link 1</a> </li>
+            <li> <a class="dropdown-item" href="#"> Link 2</a> </li>
+            <li> <a class="dropdown-item" href="#"> Link 3</a></li>
+          </ul>
+
+        </div>
+
         
 
 
