--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -795,16 +795,33 @@
             </button>
             <ul class="dropdown-menu">
               <li> <h5 class="dropdown-header"> Dropdown header 1</h5></li>
-              <li> <a class="dropdown-item" href="#"> Link 1 </a></li>
+              <li> <a class="dropdown-item active" href="#"> Link 1 </a></li>
               <li> <a class="dropdown-item" href="#"> Link 2 </a></li>
               <li> <a class="drpdown-item" href="#"> Link 3 </a> </li>
               <li> <h5 class="dropdown-header"> Dropdown header 2</h5></li>
               <li> <a class="dropdown-item" href="#"> Another link 1 </a> </li>
-              <li> <a class="dropdown-item" href="#"> Another link 2</a> </li>
+              <li> <a class="dropdown-item disabled" href="#"> Another link 2</a> </li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Dropdown position -->
+        <div class="container mt-3">
+          <div class="dropdown dropend">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+              Dropdown
+            </button>
+            <ul class="dropdown-menu">
+              <li> <a class="dropdown-item" href="#"> Normal </a></li>
+              <li> <a class="dropdown-item" href="#"> Active </a></li>
+              <li> <a class="dropdown-item active" href="#">Ojok Michael Ocan</a> </li>
+              <li> <a class="dropdown-item" href="#"> Barbra Atim </a> </li>
+
             </ul>
           </div>
 
         </div>
+
 
          
 
