--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -816,9 +816,27 @@
               <li> <a class="dropdown-item" href="#"> Active </a></li>
               <li> <a class="dropdown-item active" href="#">Ojok Michael Ocan</a> </li>
               <li> <a class="dropdown-item" href="#"> Barbra Atim </a> </li>
-
             </ul>
           </div>
+        </div>
+
+        <!--  -->
+        <div class="container mt-3">      
+          <div class="dropdown dropstart text-end">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
+              Dropstart
+            </button>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Normal</a></li>
+              <li><a class="dropdown-item active" href="#">Active</a></li>
+              <li><a class="dropdown-item disabled" href="#">Disabled</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Group buttons with a dropdown button -->
+        <div class="btn-group">
+          <button type="button" class="btn btn-primary"> Apple </button>
 
         </div>
 
