--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -837,6 +837,17 @@
         <!-- Group buttons with a dropdown button -->
         <div class="btn-group">
           <button type="button" class="btn btn-primary"> Apple </button>
+          <button type="button" class="btn btn-primary"> Samsung </button>
+          <div class="btn-group">
+            <button type="button" class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"> Sony </button>
+            <ul class="dropdown-menu">
+              <li> <a class="dropdown-item" href="#"> Tablet </a> </li>
+              <li> <a class="dropdown-item" href="#"> Smartphone </a> </li>
+              <li> <a class="dropdown-item" href="#"> Michael </a> </li>
+
+            </ul>
+
+          </div>
 
         </div>
 
