--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -844,12 +844,13 @@
               <li> <a class="dropdown-item" href="#"> Tablet </a> </li>
               <li> <a class="dropdown-item" href="#"> Smartphone </a> </li>
               <li> <a class="dropdown-item" href="#"> Michael </a> </li>
-
             </ul>
-
           </div>
-
         </div>
+
+        <!-- Bootstrap collapsible  -->
+        <button data-bs-toggle="collapse" data-bs-target="#demo"> Collapsible </button>
+        <div id="#demo"> Collapsible </div>
 
 
          
