--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -850,8 +850,8 @@
 
         <!-- Bootstrap collapsible  -->
         <button data-bs-toggle="collapse" data-bs-target="#demo"> Collapsible </button>
-        <div id="#demo"> Collapsible </div>
-
+        <div id="#demo" class="collapse"> Collapsible </div>
+        <div id="demo"></div>
 
          
 
