--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -852,7 +852,7 @@
         <button data-bs-toggle="collapse" data-bs-target="#demo"> Collapsible </button>
         <div id="#demo" class="collapse"> Collapsible </div>
         <div id="demo" class="collapse">
-          Lorem ipsum
+          Lorem ipsum mm
         </div>
 
          
