--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -854,6 +854,13 @@
         <div id="demo" class="collapse">
           Lorem ipsum mmalmo arena
         </div>
+        <div class="container mt-3">
+          <a href="#demo" class="btn btn-primary" data-bs-toggle="collapse"> Simple Collapsible </a>
+          <div id="demo" class="collapse">
+            lorem ipsum dolor sit amet, consectetur adipisicing elit,
+          </div>
+
+        </div>
 
          
 
