--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -859,6 +859,13 @@
           <div id="demo" class="collapse">
             lorem ipsum dolor sit amet, consectetur adipisicing elit,
           </div>
+        </div>
+
+        <!-- Show collapsible content by default  -->
+        <div class="container mt-3">
+          <button type="button" class="btn btn-primary" data-bs-toggle>
+
+          </button>
 
         </div>
 
