--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -863,9 +863,11 @@
 
         <!-- Show collapsible content by default  -->
         <div class="container mt-3">
-          <button type="button" class="btn btn-primary" data-bs-toggle>
-
+          <button type="button" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#demo"> Simple Collapsible
           </button>
+          <div id="demo" class="collapse show">
+            I am called Ojok Michael Ocan, I am a senior software developer.
+          </div>
 
         </div>
 
