--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -868,6 +868,19 @@
           <div id="demo" class="collapse show">
             I am called Ojok Michael Ocan, I am a senior software developer.
           </div>
+        </div>
+
+        <!-- Accordion -->
+        <div id="accordion">
+          <div class="card">
+            <div class="card-header">
+              <a class="btn" data-bs-toggle="collapse" href="#"></a>
+            </div>
+          </div>
+        </div>
+
+
+        <div>
 
         </div>
 
