--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -874,8 +874,12 @@
         <div id="accordion">
           <div class="card">
             <div class="card-header">
-              <a class="btn" data-bs-toggle="collapse" href="#"></a>
+              <a class="btn" data-bs-toggle="collapse" href="#collapseone">Collapsible group item #1</a>
             </div>
+            <div id="collapseone" class="collapse show" data-bs-parent>
+
+            </div>
+
           </div>
         </div>
 
