--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -876,15 +876,23 @@
             <div class="card-header">
               <a class="btn" data-bs-toggle="collapse" href="#collapseone">Collapsible group item #1</a>
             </div>
-            <div id="collapseone" class="collapse show" data-bs-parent>
+            <div id="collapseone" class="collapse show" data-bs-parent="#accordion">
+              <div class="card-body"> Lorem ipsum
+              </div>
 
             </div>
 
           </div>
         </div>
 
-
-        <div>
+<!-- Navs -->
+        <div class="container mt-3">
+          <ul class="nav bg-success">
+            <li class="nav-item ">
+              <a class="nav-link" href="#"> Home </a>
+            </li>
+            
+          </ul>
 
         </div>
 
