--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -887,9 +887,19 @@
 
 <!-- Navs -->
         <div class="container mt-3">
-          <ul class="nav bg-success">
+          <div>
+            <h1>Ojok Michael Ocan </h1>
+          </div>
+          
+          <ul class="nav bg-danger text-white">
             <li class="nav-item ">
               <a class="nav-link" href="#"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Products </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"> Contact </a>
             </li>
             
           </ul>
