--- a/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
+++ b/Personal_website3/OjokMichaelOcan/bootstrap practise/bootstrap_practise/index.html
@@ -891,7 +891,7 @@
             <h1>Ojok Michael Ocan </h1>
           </div>
           
-          <ul class="nav bg-danger text-white">
+          <ul class="nav bg-danger text-white justify-content-end">
             <li class="nav-item ">
               <a class="nav-link" href="#"> Home </a>
             </li>
@@ -905,6 +905,8 @@
           </ul>
 
         </div>
+        <br>
+        <br>
 
          
 
